add sass and live sass compil config

--- a/index.html
+++ b/index.html
@@ -4,10 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles/css/main.css">
 </head>
 <body>
     <h1>Riquelme Clément - Portfolio</h1>
+    <p class="presentation">je m'appel clement Riquelme .... </p>
 
+
+    <div class=" parent">
+        je suis le pere
+        <div class=" enfant">
+        je suis l'enfant
+        </div>
+    </div>
+    
 </body>
 </html>
