First section button

--- a/index.html
+++ b/index.html
@@ -7,16 +7,31 @@
     <link rel="stylesheet" href="styles/css/main.css">
 </head>
 <body>
-    <h1>Riquelme Clément - Portfolio</h1>
-    <p class="presentation">je m'appel clement Riquelme .... </p>
+    <header class="header-website">
+        menu
+    </header>
+    <main>
+        <section class="section-display left-content">
+            <article class="text-content">
+                <h1 class="title">Riquelme Clément</h1>
+                <p class="paragraph">Je suis suis un passionné de Développement Web. J'ai acquis de l'exprèrience en développement Fullstack et J'utilise Javascript, Sass,Reactjs et pleins D'autres Framworks super sympas</p>
+                <div class="socials">
+                socials icons
+                </div>
+                <div class="action-div">
+                    <button class="btn btn-primary">contact</button>
+                    <button class="btn btn-primary">voir mon cv</button>
 
-
-    <div class=" parent">
-        je suis le pere
-        <div class=" enfant">
-        je suis l'enfant
-        </div>
-    </div>
+                </div>
+            </article>
+                <div class="illustration">
+                    <img src="img/presentation1.png" alt="présentation de Riquelme clément" width="650px" height="650px">
+                </div>
+        </section>
+    </main>
+    <footer>
+        footer
+    </footer>
     
 </body>
 </html>
