ajout du block compétences

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="styles/css/main.css">
 </head>
 <body>
@@ -11,16 +12,16 @@
         menu
     </header>
     <main>
-        <section class="section-display left-content">
+        <section class="section-display left-text-content">
             <article class="text-content">
                 <h1 class="title">Riquelme Clément</h1>
                 <p class="paragraph">Je suis suis un passionné de Développement Web. J'ai acquis de l'exprèrience en développement Fullstack et J'utilise Javascript, Sass,Reactjs et pleins D'autres Framworks super sympas</p>
                 <div class="socials">
-                socials icons
+                <!--socials icons -->
                 </div>
                 <div class="action-div">
-                    <button class="btn btn-primary">contact</button>
-                    <button class="btn btn-primary">voir mon cv</button>
+                    <button class="btn btn-primary">Contact</button>
+                    <button class="btn btn-primary">Mon CV</button>
 
                 </div>
             </article>
@@ -28,6 +29,45 @@
                     <img src="img/presentation1.png" alt="présentation de Riquelme clément" width="650px" height="650px">
                 </div>
         </section>
+        <section class="section-display right-text-content">
+            <article class="text-content">
+                <h2 class="title">Mes compétences</h1>
+                <p class="paragraph">Voici les compétences que je maitrise</p>
+                <div class="competences-icons">
+                    <i class="fa-brands fa-html5"></i>
+                    <i class="fa-brands fa-css3-alt"></i>
+                    <i class="fa-brands fa-js"></i>
+                    <i class="fa-brands fa-react"></i>
+                    <i class="fa-brands fa-sass"></i>
+                </div>
+                <div class="socials">
+                <!--socials icons -->
+                </div>
+            </article>
+                <div class="illustration">
+                    <img src="img/competences1.png" alt="présentation de Riquelme clément">
+                </div>
+        </section>
+                <section class="section-display left-text-content">
+            <article class="text-content">
+                <h2 class="title">Mes compétences</h1>
+                <p class="paragraph">Voici les compétences que je maitrise</p>
+                <div class="competences-icons">
+                    <i class="fa-brands fa-html5"></i>
+                    <i class="fa-brands fa-css3-alt"></i>
+                    <i class="fa-brands fa-js"></i>
+                    <i class="fa-brands fa-react"></i>
+                    <i class="fa-brands fa-sass"></i>
+                </div>
+                <div class="socials">
+                <!--socials icons -->
+                </div>
+            </article>
+                <div class="illustration">
+                    <img src="img/competences1.png" alt="présentation de Riquelme clément">
+                </div>
+        </section>
+
     </main>
     <footer>
         footer
@@ -35,3 +75,5 @@
     
 </body>
 </html>
+
+24.33 sass 4/7
