--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <section class="section-display left-text-content">
             <article class="text-content">
                 <h1 class="title">Riquelme Clément</h1>
-                <p class="paragraph">Je suis suis un passionné de Développement Web. J'ai acquis de l'exprèrience en développement Fullstack et J'utilise Javascript, Sass,Reactjs et pleins D'autres Framworks super sympas</p>
+                <p class="paragraph">Je suis suis un passionné de Développement Web <span class="animate-fusée">🚀</span>. J'ai acquis de l'exprèrience en développement Fullstack et J'utilise Javascript, Sass,Reactjs et pleins D'autres Framworks super sympas</p>
                 <div class="socials">
                 <!--socials icons -->
                 </div>
