--- a/index.html
+++ b/index.html
@@ -14,8 +14,19 @@
     <main>
         <section class="section-display left-text-content">
             <article class="text-content">
-                <h1 class="title">Riquelme Clément</h1>
-                <p class="paragraph">Je suis suis un passionné de Développement Web <span class="animate-fusée">🚀</span>. J'ai acquis de l'exprèrience en développement Fullstack et J'utilise Javascript, Sass,Reactjs et pleins D'autres Framworks super sympas</p>
+                <h1 class="title">Riquelme Clément 
+                    <picture class="emoji-gif">
+                        <source srcset="https://fonts.gstatic.com/s/e/notoemoji/latest/1f6a9/512.webp" type="image/webp">
+                        <img src="https://fonts.gstatic.com/s/e/notoemoji/latest/1f6a9/512.gif" alt="🚩">
+                    </picture>
+                </h1>
+                <p class="paragraph">Je suis suis un passionné de Développement Web 
+                    <span class="animate-fusée">
+                        <picture class="emoji-gif">
+                            <source srcset="https://fonts.gstatic.com/s/e/notoemoji/latest/1f680/512.webp" type="image/webp">
+                            <img src="https://fonts.gstatic.com/s/e/notoemoji/latest/1f680/512.gif" alt="🚀">
+                        </picture>
+                    </span>. J'ai acquis de l'exprèrience en développement Fullstack et J'utilise Javascript, Sass,Reactjs et pleins D'autres Framworks super sympas</p>
                 <div class="socials">
                 <!--socials icons -->
                 </div>
@@ -77,3 +88,4 @@
 </html>
 
 24.33 sass 4/7
+
