--- a/index.html
+++ b/index.html
@@ -9,10 +9,39 @@
 </head>
 <body>
     <header class="header-website">
-        menu
+        <nav class="navbar navbar-website">
+            <div class="logo">
+                <!--<img src="img/logo.png" alt="logo Riquelme Clément"> -->
+                <span class="logo-text">Riquelme Clément</span>
+            </div>
+            <div class="menu">
+                <label type="button" class="btn btn-primary menu-input-label" for="menu-toggle"><i class="fa-solid fa-bars"></i></label>
+                <input type="checkbox" id="menu-toggle" class="menu-input">            
+                <div class="dropdown-menu">
+                    <ul class="nav-links">
+                        <li class="nav-link">
+                            <a href="#accueil">Accueil</a>
+                        </li>                
+                        <li class="nav-link">
+                            <a href="#compétences">Compétences</a>
+                        </li>
+                        <li class="nav-link">
+                            <a href="#ab">À propos</a>
+                        </li>
+                        <li class="nav-link">
+                            <a href="#projects">Projets</a>
+                        </li>
+                        <li class="nav-link">
+                            <a href="#contact">Contact</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+
+        </nav>
     </header>
     <main>
-        <section class="section-display left-text-content">
+        <section class="section-display left-text-content" id="Accueil">
             <article class="text-content">
                 <h1 class="title">Riquelme Clément 
                     <picture class="emoji-gif">
@@ -40,7 +69,7 @@
                     <img src="img/presentation1.png" alt="présentation de Riquelme clément" width="650px" height="650px">
                 </div>
         </section>
-        <section class="section-display right-text-content">
+        <section class="section-display right-text-content" id="compétences">
             <article class="text-content">
                 <h2 class="title">Mes compétences</h1>
                 <p class="paragraph">Voici les compétences que je maitrise</p>
@@ -83,9 +112,13 @@
     <footer>
         footer
     </footer>
-    
+    <div id="loader">
+        <div class="loader">
+
+        </div >
+    </div>    
 </body>
 </html>
 
-24.33 sass 4/7
+
 
