ajout bar compétences

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </section>
         <section class="section-display right-text-content" id="compétences">
             <article class="text-content">
-                <h2 class="title">Mes compétences</h1>
+                <h2 class="title">Mes compétences</h2>
                 <p class="paragraph">Voici les compétences que je maitrise</p>
                 <div class="competences-icons">
                     <i class="fa-brands fa-html5"></i>
@@ -90,7 +90,7 @@
         </section>
                 <section class="section-display left-text-content">
             <article class="text-content">
-                <h2 class="title">Mes compétences</h1>
+                <h2 class="title">Mes compétences</h2>
                 <p class="paragraph">Voici les compétences que je maitrise</p>
                 <div class="competences-icons">
                     <i class="fa-brands fa-html5"></i>
@@ -107,7 +107,24 @@
                     <img src="img/competences1.png" alt="présentation de Riquelme clément">
                 </div>
         </section>
-
+        <section class="section-display full-text-content" id="blog">
+            <div class="text-content">
+                <h2 class="title">blog</h2>
+                <p>Dans la suite de cet article, nous allons modifier l'exemple précédent pour obtenir des informations supplémentaires </p>
+                <section class="list-blog">
+                    <article class="blog">
+                        <h4>blog 1</h4>
+                        <p>Dans la suite de cet article, nous allons modifier l'exemple précédent pour obtenir des informations supplémentaires sur chaque événement d'animation lorsqu'il se produit afin de mieux voir comment cela fonctionne</p>
+                        <a href="google.com" class="link-blog">-></a>
+                    </article>
+                    <article class="blog">
+                        <h4>blog 1</h4>
+                        <p>Dans la suite de cet article, nous allons modifier l'exemple précédent pour obtenir des informations supplémentaires sur chaque événement d'animation lorsqu'il se produit afin de mieux voir comment cela fonctionne</p>
+                        <a href="google.com" class="link-blog">-></a>
+                    </article>
+                </section>
+            </div>
+        </section>
     </main>
     <footer>
         footer
@@ -119,6 +136,9 @@
     </div>    
 </body>
 </html>
+
+
+26.31 6/7
 
 
 
